<resources>
    <string name="app_name">Camp</string>
    <string name="books">Books</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="email_e_ou_senha_incorretos">Email e/ou senha incorretos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informacoes">INFORMAÇÕES</string>
    <string name="fechar">Fechar</string>
    <string name="paginas">Páginas</string>
    <string name="editora">Editora</string>
    <string name="publicao">Publicação</string>
    <string name="idioma">Idioma</string>
    <string name="titulo_original">Título original</string>
    <string name="isbn_10">ISBN_10</string>
    <string name="isbn_13">ISBN_13</string>
    <string name="resenha_da_editora">RESENHA DA EDITORA</string>
    <string name="nao_encontramos_nenhum_livro">Não encontramos nenhum livro com esses termos</string>
</resources>