<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.BookDetailsBottomSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonClose"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/fechar"
            android:background="@drawable/ic_close"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageBigBookContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonClose"
            app:cardElevation="24dp" >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageBigBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/big_book" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBookName"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.43"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBigBookContainer"
            tools:text="Change By Design Second Line exame alguma coisa e tal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAuthors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/subtitle"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBookName"
            tools:text="Tim Brow, Julia Zhuo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/informacoes"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAuthors" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/labels_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewInfo">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLabelPages"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paginas" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLabelEditor"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editora" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLabelDatePublication"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publicao" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLabelLanguage"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idioma" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLabelOriginalTitle"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_original" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLabelIsbn_10"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn_10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLabelIsbn_13"
                style="@style/Book_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn_13" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/resenha_da_editora"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labels_container" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/reviewContainer"
            android:layout_width="323dp"
            android:layout_height="186dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewReview">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textReview"
                style="@style/Book_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewContainer"
                tools:text="This book describes how Design Thinking is applied across a variety of industries, enriched with other proven approaches as well as the necessary tools, and the knowledge to use them effectively. Packed with solutions for common challenges including digital transformation, this practical, highly visual discussion shows you how Design Thinking fits into agile methods within management, innovation, and startups." />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>